[tool.poetry]
name = "wahlwave-frontend"
version = "0.1.0"
description = ""
authors = ["Richard <richard.kruemmel@code.berlin>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
